--- a/templates/config-v1.1.xml.in
+++ b/templates/config-v1.1.xml.in
@@ -19,8 +19,8 @@
     </incomingServer>
     <outgoingServer type="smtp">
       <hostname>${mailbox_domain}</hostname>
-      <port>465</port>
-      <socketType>SSL</socketType>
+      <port>587</port>
+      <socketType>STARTTLS</socketType>
       <authentication>password-cleartext</authentication>
       <username>%EMAILLOCALPART%</username>
     </outgoingServer>
