--- a/templates/mailbox.in
+++ b/templates/mailbox.in
@@ -28,6 +28,9 @@ configure_postfix() {
     done
 
     postconf -e mydomain="`cat /var/lib/tor/${mailbox_domain}/hostname`"
+    # Set hostname as hidden service, otherwise postfix believes it's
+    # greeting itself
+    postconf -e myhostname="`cat /var/lib/tor/${mailbox_domain}/hostname`"
     postconf -e mydestination="${mailbox_domain} `cat /var/lib/tor/${mailbox_domain}/hostname`"
 
     # canonicalize the local address into the onion address
