--- a/templates/mailbox.in
+++ b/templates/mailbox.in
@@ -34,7 +34,7 @@ configure_postfix() {
     postconf -e mydestination="${mailbox_domain} `cat /var/lib/tor/${mailbox_domain}/hostname`"
 
     # canonicalize the local address into the onion address
-    echo -n '${mailbox_user}@${mailbox_address} ${mailbox_user}@' \
+    echo -n '${mailbox_user}@${mailbox_domain} ${mailbox_user}@' \
     | cat - /var/lib/tor/${mailbox_domain}/hostname \
     >> /etc/postfix/canonical
   fi
