--- a/site/_i18n/en.yml
+++ b/site/_i18n/en.yml
@@ -2,6 +2,7 @@ translate: 'translate!'
 download: 'download'
 why: 'why!'
 home: 'home'
+presentation: 'presentation (spanish)'
 titles:
   index: 'mailbox.sexy'
   translate: 'translate this site'
