--- a/site/_i18n/es.yml
+++ b/site/_i18n/es.yml
@@ -2,6 +2,7 @@ translate: '¡traduce!'
 download: 'descarga'
 why: '¡por qué!'
 home: 'inicio'
+presentation: 'presentación'
 titles:
   index: 'mailbox.sexy'
   translate: 'traduce este sitio'
